Subo cambios día 24-03-2014

--- a/web.config
+++ b/web.config
@@ -1,9 +1,24 @@
 ﻿<?xml version="1.0"?>
 
 <configuration>
+  
+  <connectionStrings>
+    <add name="CONNECTION" connectionString="Data Source=JAVIER-PC;Initial Catalog=BD_CrackCompany;Persist Security Info=True;User ID=sa;Password=xjotutPO024" providerName="Proveedor de datos de .NET Framework para servidor SQL Server"/>
+  </connectionStrings>
+  
+  <system.web>
+    <compilation debug="true" targetFramework="4.0" />
 
-    <system.web>
-        <compilation debug="false" targetFramework="4.0" />
-    </system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="login.aspx" name="AuthCookie" timeout ="60" path="/"></forms>
+    </authentication>
+
+    <customErrors mode="Off" defaultRedirect="error.aspx">
+      <error statusCode="404" redirect="error404.aspx" />
+    </customErrors>
+
+    <sessionState timeout="60" mode="InProc" />
+      
+  </system.web>   
 
 </configuration>
