Subo los cambios del 25/03/2014

--- a/web.config
+++ b/web.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0"?>
 
 <configuration>
+
+  <configSections>
+    <sectionGroup name="system.web">
+      <section name="sanitizer" requirePermission="false" type="AjaxControlToolkit.Sanitizer.ProviderSanitizerSection, AjaxControlToolkit"/>
+    </sectionGroup>
+  </configSections>
   
   <connectionStrings>
     <add name="CONNECTION" connectionString="Data Source=JAVIER-PC;Initial Catalog=BD_CrackCompany;Persist Security Info=True;User ID=sa;Password=xjotutPO024" providerName="Proveedor de datos de .NET Framework para servidor SQL Server"/>
@@ -9,6 +15,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
 
+    <sanitizer defaultProvider="HtmlAgilityPackSanitizerProvider">
+      <providers>
+        <add name="HtmlAgilityPackSanitizerProvider" type="AjaxControlToolkit.Sanitizer.HtmlAgilityPackSanitizerProvider"></add>
+      </providers>
+    </sanitizer>
+      
     <authentication mode="Forms">
       <forms loginUrl="login.aspx" name="AuthCookie" timeout ="60" path="/"></forms>
     </authentication>
@@ -16,9 +28,10 @@
     <customErrors mode="Off" defaultRedirect="error.aspx">
       <error statusCode="404" redirect="error404.aspx" />
     </customErrors>
-
+    
     <sessionState timeout="60" mode="InProc" />
-      
-  </system.web>   
-
+    
+  </system.web>
+  
 </configuration>
+
