--- a/web.config
+++ b/web.config
@@ -1,25 +1,15 @@
 ﻿<?xml version="1.0"?>
 
 <configuration>
-
-  <configSections>
-    <sectionGroup name="system.web">
-      <section name="sanitizer" requirePermission="false" type="AjaxControlToolkit.Sanitizer.ProviderSanitizerSection, AjaxControlToolkit"/>
-    </sectionGroup>
-  </configSections>
   
   <connectionStrings>
     <add name="CONNECTION" connectionString="Data Source=JAVIER-PC;Initial Catalog=BD_CrackCompany;Persist Security Info=True;User ID=sa;Password=xjotutPO024" providerName="Proveedor de datos de .NET Framework para servidor SQL Server"/>
   </connectionStrings>
   
   <system.web>
-    <compilation debug="true" targetFramework="4.0" />
+    <httpRuntime requestValidationMode="2.0" />
 
-    <sanitizer defaultProvider="HtmlAgilityPackSanitizerProvider">
-      <providers>
-        <add name="HtmlAgilityPackSanitizerProvider" type="AjaxControlToolkit.Sanitizer.HtmlAgilityPackSanitizerProvider"></add>
-      </providers>
-    </sanitizer>
+    <compilation debug="true" targetFramework="4.0" />    
       
     <authentication mode="Forms">
       <forms loginUrl="login.aspx" name="AuthCookie" timeout ="60" path="/"></forms>
